list-view: create folders in subdirectories when possible

Don't always choose the tree root as parent when creating a new folder,
but look at the current selection's directory.

https://bugzilla.gnome.org/show_bug.cgi?id=330644