src/nautilus-view.h
@@ -142,6 +142,14 @@ struct NautilusViewClass {
          */
         void     (* reset_to_defaults)	         (NautilusView *view);
 
+	/* get_backing uri is a function pointer for subclasses to
+	 * override. Subclasses may replace it with a function that
+	 * returns the URI for the location where to create new folders,
+	 * files, links, launchers, and paste the clipboard to.
+	 */
+
+	char *	(* get_backing_uri)		(NautilusView *view);
+
 	/* get_selection is not a signal; it is just a function pointer for
 	 * subclasses to replace (override). Subclasses must replace it
 	 * with a function that returns a newly-allocated GList of
